--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
         <img src="https://tailwindui.com/plus/img/logos/mark.svg?color=indigo&shade=600" class="" alt="image">
         <div>
           <h1 class="text-2xl font-bold">V Sunil Kumar</h1>
-          <p class="text-md font-light mt-1">I am <span class="font-semibold">UI/UX Designer</span> & <span
+          <p class="text-md font-light mt-1">I am <span class="font-semibold">UI/UX Designer</span> & <spanit
               class="font-semibold">Front
               End Developer</span> with enhanced skills in Graphic Designing, Video Editing & Web Designing</p>
         </div>
