--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
 
   <main class="container mx-auto my-6">
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 ">
-      <div class=" bg-white p-6 grid shadow rounded-2xl">
+      <div class=" bg-white p-6 grid gap-3 shadow rounded-2xl">
         <img src="https://tailwindui.com/plus/img/logos/mark.svg?color=indigo&shade=600" class="" alt="image">
         <div>
           <h1 class="text-2xl font-bold">V Sunil Kumar</h1>
