--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 
-<body class="p-6 lg:p-0">
+<body class="p-6 lg:p-0 lg:mx-36">
 
   <header
     class="flex flex-wrap sm:justify-start sm:flex-nowrap w-full bg-white text-sm py-3 bg-white shadow w-50 lg:container mx-auto lg:mt-6 rounded-2xl">
